force-app/main/default/objects/Service_Boundary__mdt/Service_Boundary__mdt.object-meta.xml
<CustomObject>
    <label>Service Boundary</label>
    <pluralLabel>Service Boundaries</pluralLabel>
</CustomObject>