force-app/main/default/objects/Service_Boundary__mdt/fields/Address_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Address_Pattern__c</fullName>
    <label>Address Pattern</label>
    <type>Text</type>
    <length>255</length>
    <description>Substring matched (case-insensitive) against incoming address strings.</description>
</CustomField>