force-app/main/default/objects/Service_Boundary__mdt/fields/Canonical_Address__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Address__c</fullName>
    <label>Canonical Address</label>
    <type>Text</type>
    <length>255</length>
</CustomField>