force-app/main/default/objects/Service_Boundary__mdt/fields/In_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>In_Service_Area__c</fullName>
    <label>In Service Area</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>